--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "cannon-es": "^0.20.0",
     "stats.js": "^0.17.0",
-    "three": "^0.175.0"
+    "three": "^0.175.0",
+    "uuid": "^11.1.0",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "vite": "^6.2.6"
