--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cannon-es": "^0.20.0",
+    "express": "^5.1.0",
     "stats.js": "^0.17.0",
     "three": "^0.175.0",
     "uuid": "^11.1.0",
